EX-35 | Show Course
* EX-39 | [BE] Show Course API

* EX-42 | [BE] List Course Groups API
