# config/routes.rb
@@ -5,11 +5,13 @@ Rails.application.routes.draw do
 
   namespace :staff_portal do
     resources :sessions, only: %i[create destroy]
-    resources :courses, only: %i[index]
+    resources :courses, only: %i[index show] do
+      resources :course_groups, only: %i[index]
+    end
   end
 
   namespace :student_portal do
     resources :sessions, only: %i[create destroy]
-    resources :courses, only: %i[index]
+    resources :courses, only: %i[index show]
   end
 end
